# projetlp25-2022

./: CMakeLists.txt  Makefile  analysis.c  analysis.h  configuration.c  direct_fork.c  main.c  reducers.c  utility.c
